<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi_state"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/is5GTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/is5ghzbandsupported_returns_unknown" />

        <TextView
            android:id="@+id/getWifiTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getwifistate_returns_unknown" />

        <TextView
            android:id="@+id/isenabledTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iswifienabled_returns_unknown" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_wifi_state" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="Scan Wifi"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Button
            android:id="@+id/scanBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start Scan" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>